# hello_msix

./: .gitignore  CMakeLists.txt  README.md  appxmanifest.xml  file.hpp  main.cpp  signal.hpp
pack/: appxmanifest.xml  modification_test
src/: file.hpp  first_run.hpp  main.cpp  path.hpp  signal.hpp  winrt.hpp
